# atadizayn-website

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  resetdb.sh
atadizayn_website/blog/: admin.py  apps.py  models.py  sitemaps.py  translation.py  urls.py  views.py
atadizayn_website/blog/migrations/: 0001_initial.py  0002_alter_blogpost_collection_alter_blogpost_content_and_more.py  0002_alter_blogpost_content_alter_blogpost_content_en_and_more.py  0002_remove_blogpost_excerpt_remove_blogpost_excerpt_en_and_more.py  0003_alter_blogpost_slug_alter_blogpost_slug_en_and_more.py
atadizayn_website/core/: admin.py  apps.py  context_processors.py  models.py  sitemaps.py  slug_utils.py  translation.py  urls.py  views.py
atadizayn_website/core/management/commands/: collectstatic.py
atadizayn_website/core/migrations/: 0001_initial.py  0002_alter_brandcarouselimage_options_and_more.py  0002_alter_policy_options_alter_siteconfiguration_options.py  0002_remove_brandcarouselimage_alt_text_en_and_more.py  0003_alter_brandcarouselimage_image_and_more.py  0003_alter_brandcarouselimage_options_and_more.py  0004_alter_brandcarouselimage_image.py  0004_alter_brandcarouselimage_website_url_and_more.py  0005_brandcarouselimage_website_url.py  0006_siteasset.py
atadizayn_website/core/templatetags/: core_tags.py  translated_fields.py
atadizayn_website/products/: admin.py  apps.py  context_processors.py  models.py  sitemaps.py  translation.py  urls.py  views.py
atadizayn_website/products/migrations/: 0001_initial.py  0002_alter_category_slug_alter_category_slug_en_and_more.py  0002_remove_category_seo_canonical_and_more.py  0002_remove_category_seo_description_and_more.py  0002_remove_product_color_remove_product_color_en_and_more.py  0002_remove_product_slug.py  0002_translatable_slugs.py  0003_alter_category_rich_text_alter_category_rich_text_en_and_more.py  0003_alter_category_slug_alter_category_slug_en_and_more.py  0003_alter_product_code_and_more.py  0003_category_collection_product_color_en_and_more.py  0004_product_slug_alter_product_code.py  0005_alter_category_collection_alter_category_slug.py  0006_remove_product_weight_product_package_weight.py
atadizayn_website/products/models/: __init__.py  category_models.py  product_models.py
config/: settings.py  urls.py
config/settings/: __init__.py  base.py  local.py  prod.py
frontend/: package-lock.json  package.json
frontend/src/: custom.scss
frontend/src/scss/: bootstrap-stack.scss  components.scss  mixins.scss  settings.scss
locale/en/LC_MESSAGES/: django.mo  django.po
static/css/: bootstrap-custom.css
static/js/: admin_crop.js  navbar-landing.js
templates/: 404.html  500.html  base.html  home.html  kitchen_sink.html  part_index.html  stand_index.html
templates/blog/: detail.html  index.html
templates/core/: policy_detail.html  search_results.html
templates/partials/: _category_tree.html  _footer.html  _head.html  _navbar.html  _service_card.html
templates/partials/home/: _blog.html  _catalogs.html  _contact.html  _hero.html  _partners.html  _products.html  _search_cta.html  _services.html
templates/products/: category_detail.html  category_leaf.html  home.html  product_detail.html  search_results.html
