[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atadizayn_website"
version = "0.1.0"
description = "Django Analytics and Tracking System"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "Django>=5.0",
    "gunicorn>=21.2",
    "django-environ",
    "psycopg[binary]>=3.1",
    "django-cookie-consent>=0.5",
    "django-cors-headers>=4.3",
    "django-storages>=1.14",
    "boto3>=1.34",
    "django-mptt>=0.16",
    "django-modeltranslation>=0.19",
    "Pillow>=10.0",
    "whitenoise"
]

[project.optional-dependencies]
dev = [
    "djlint>=1.36",
]

[tool.djlint]
profile = "django"
max_line_length = 120
indent = 4
[tool.setuptools.packages.find]
where = ["."]
include = ["config", "atadizayn_website"]
namespaces = false